# cubist

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
cubist/: __init__.py  abduction.py  agent.py  bench.py  dsl.py  perception.py
cubist/policy/: __init__.py  base.py  explore.py  frontier.py  signal.py
cubist/world_model/: __init__.py  analogy_model.py  core.py  descent_model.py  hybrid_model.py
dashboard/: app.py
results/: 20260713-111759__bench.csv  20260713-122406__bench.csv  20260713-153830__bench.csv
scripts/: golden.py
tests/: conftest.py  golden.json  test_core.py  test_dsl.py  test_loop.py  test_policy_api.py
