[project]
name = "cubist"
version = "1.0.0"
description = "Symbolic gradient descent: an online world-model of readable laws for ARC-AGI-3"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Louis Manhès" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "arc-agi>=0.9.4",
    "numpy>=2.0",
    "scipy>=1.14.0",
    "streamlit>=1.40",
    "plotly>=5.24",
    "pandas>=2.2",
]

[project.urls]
Repository = "https://github.com/lmanhes/cubist"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cubist"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"

